# fastautoclicker

./: .deepsource.toml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  index.html  latest.json  package.json  postcss.config.mjs  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  Context.tsx  constants.tsx  main.tsx  styles.css  types.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  storage.rs  util.rs
src-tauri/src/inputs/: linput.rs  minput.rs  mod.rs  winput.rs
src-tauri/src/modules/: keylistener.rs  mod.rs  storage.rs  util.rs
src/components/: ClickIntervalPanel.tsx  ClickOptionsPanel.tsx  ClickRepeatPanel.tsx  ControlButtons.tsx  HotkeyPopup.tsx  Modal.tsx  Segmented.tsx  Titlebar.css  Titlebar.tsx  UpdatePopup.tsx  hotkey.tsx  util.ts
src/components/ui/: Titlebar.tsx
src/hooks/: useHotkey.tsx  useSettings.tsx  useTauriEvent.tsx  useUpdater.tsx
src/lib/: commands.tsx  hotkey.tsx  util.tsx
src/styles/: globals.css
