[package]
name = "FastAutoClicker"
version = "1.0.2"
description = "An open sourced, lightweight, and fast auto clicker designed with a sleek modern interface."
authors = ["jakemcquade"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-single-instance = "^2"
tauri-plugin-updater = "^2.10.1"
tauri-plugin-log = "^2"
chrono = "0.4.38"
serde_json = "1"
log = "0.4.22"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.19.0", features = ["highsierra"] }
rdev = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.7.1"
evdev = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
